--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ nav ul li a:hover {
 .leftSection {
   font-size: 2.5rem;
 }
-
+ 
 #element {
   color: gold;
 }
@@ -82,6 +82,16 @@ nav ul li a:hover {
   max-width: 80vw;
   margin: auto;
   height: 80vh;
+}
+
+.thirdSection{
+  max-width: 80vw;
+  margin: auto;
+  height: 80vh;
+}
+
+.thirdSection h1{
+  font-size: 1.6rem;
 }
 
 .secondSection h1 {
@@ -112,7 +122,7 @@ nav ul li a:hover {
   background: white;
   width: 1px;
   height: 93px;
-  margin: 0 100px;
+  margin: 0 150px;
 }
 
 .leftSection .btn {
@@ -216,4 +226,68 @@ input {
 input:focus {
   outline: none;
   border-color: rgba(237, 205, 27, 0.803);
+}
+
+.cardimg{
+  width: 100%;
+  border-radius: 12px;
+  height: 214px;
+  object-fit: cover;
+}
+
+#cont{
+  max-width: 300px;
+  margin: 0 auto;
+  margin-top: 20vh;
+}
+
+.card{
+  background-color: white;
+  padding: 8px;
+  border-radius: 12px;
+  border: 1px solid black;
+}
+.tag{
+  padding: 4px 8px;
+  border: 1px solid black;
+  border-radius: 50px;
+  font-size: 8px;
+  font-weight: 200;
+  color: #000;
+}
+
+.name{
+  font-size: 20px;
+  color: black;
+  font-weight: 200;
+  margin-top: 12px;
+}
+
+.content{
+  font-size: 12px;
+  color: black;
+  line-height: 150%;
+
+}
+
+.cardbtn{
+  border: 1px solid black;
+  padding: 10px 20px;
+  border-radius: 50px;
+  font-weight: 200;
+  margin: 0 auto;
+  display: block;
+  cursor: pointer;
+}
+
+.cardbtn:hover{
+  background-color: #12586a;
+  border: 1px solid black;
+}
+
+.cards12{
+  display: flex;
+  margin: auto;
+  justify-content: space-evenly;
+  margin-bottom: 122px;
 }
